<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detect.AnalyzeResultActivity">

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="376dp"
        android:layout_height="380dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/scanResultTV"
        android:layout_width="128dp"
        android:layout_height="82dp"
        android:text="@string/fresh"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/ic_edit_attributes_24"
        android:backgroundTint="@color/Fresh"
        app:layout_constraintTop_toBottomOf="@id/iv_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/detection_result_description_fresh"
        app:layout_constraintStart_toStartOf="@id/iv_preview"
        app:layout_constraintTop_toBottomOf="@id/scanResultTV" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/back_to_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"/>

    <Button
        android:id="@+id/save_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/save_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

</androidx.constraintlayout.widget.ConstraintLayout>