<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="148dp"
            android:layout_height="156dp"
            android:contentDescription="@string/picture"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/iv_item_photo"
            app:layout_constraintStart_toEndOf="@id/iv_item_photo" />

        <TextView
            android:id="@+id/tv_item_scan_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:justificationMode="inter_word"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            app:layout_constraintStart_toEndOf="@id/iv_item_photo"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:src="@drawable/baseline_delete_24"
            android:contentDescription="@string/fab_delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>