<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBg">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/galeryButton"
        android:layout_width="170dp"
        android:layout_height="56dp"
        android:text="@string/choose_from_galery"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cameraButton"/>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="170dp"
        android:layout_height="56dp"
        android:text="@string/take_a_picture"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@id/galeryButton"
        app:layout_constraintStart_toEndOf="@id/galeryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/galeryButton"/>

    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/analyze"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="26dp"
        android:layout_marginStart="23dp"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>